2012-10-20 unix-privesc-check trunk

* 

-- Bernardo Damele A. G. <bernardo.damele@gmail.com>

2012-10-19 unix-privesc-check trunk

* Re-engineered check lib/checks/binary_rpath
* Fixed the file_parent_traverse function call in lib/checks/binary_writable
  and lib/checks/system_libraries
* Fixed some more checks' descriptions
* Bug fix: Syntax fix in lib/misc/binary

-- Bernardo Damele A. G. <bernardo.damele@gmail.com>

2012-10-18 unix-privesc-check trunk

* Tidied up upc.sh, added an additional error check
* Purged dummy, replaced with _ after suggestion from BDA
* Bug fix: No longer considers "enabled" as a check
* Changed lib/misc/privileged to split out cache generation so that it
  happens on inclusion
* Bug fix: Removed unitentional trailing space from file cache

-- Tim Brown <timb@nth-dimension.org.uk>

2012-10-18 unix-privesc-check trunk

* Bug fix: Fixed regexp patterns to avoid returning directories in
  lib/misc/privileged and lib/misc/file

-- <pentestmonkey@pentestmonkey.net>

2012-10-18 unix-privesc-check trunk

* Added check lib/checks/binary_writable
* Bug fix: Proper use of dirname in file_show_symlinked_filename function
* Bug fix: Replaced stdin redirection with cat for inetd configuration
  files parsing in lib/misc/linker
* Bug fix: Avoid escaping a path with an asterisk in lib/misc/ssh_agent
* Refactored check lib/checks/system_libraries code
* Refactored check lib/checks/world_writable code
* Refactored check lib/checks/binary_dependency code
* Refactored checks lib/checks/setuid and lib/checks/setgid code
* Improved a lot speed of lib/checks/jar and lib/checks/key_material
* Improved lib/misc/ssh_agent to work on recent Linux distributions too
  and inspect /tmp folder for both SSH agent parent process and pid-1
* Avoid duplicate processes entries in lib/misc/privileged
* Improved regular expression patterns throughout the code
* Added --check and --version switches to upc.sh
* Added description to missing checks