@@ -34,7 +34,6 @@ setuid_main () {
 	do
 		file_show_non_symlink_perms " ${filename}$" | while read filename permissions userid groupid
 		do
-			# TODO we should validate these
 			stdio_message_warn "setuid" "${filename} is setuid (${userid}, ${groupid}): ${permissions}"
 		done
 	done
